--- a/WebApplication4/WebApplication4/Views/Ventas/PagoOrganizador.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/PagoOrganizador.cshtml
@@ -84,13 +84,13 @@
                                 if (@item.codigo != ce)
                                 {
                                     <option value="@item.codigo">
-                                        @item.nombre
+                                        @item.codigo - @item.nombre
                                     </option>
                                 }
                                 else
                                 {
                                     <option value="@item.codigo" selected="selected">
-                                        @item.nombre
+                                        @item.codigo - @item.nombre
                                     </option>
                                 }
                             }
