--- a/WebApplication4/WebApplication4/Views/Ventas/PagoOrganizador.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/PagoOrganizador.cshtml
@@ -33,7 +33,7 @@
 <div class="container-fluid">
     <div class="col-md-5">
         <ol class="breadcrumb">
-            <li class="active">Registrar Pagos</li>
+            <li class="active">Registrar Pagos de Penalidad</li>
         </ol>
     </div>
 </div>
