arregle cambiar contraseña

--- a/WebApplication4/WebApplication4/Views/Manage/ChangePassword.cshtml
+++ b/WebApplication4/WebApplication4/Views/Manage/ChangePassword.cshtml
@@ -1,37 +1,46 @@
 ﻿@model WebApplication4.Models.ChangePasswordViewModel
 @{
-    ViewBag.Title = "Change Password";
+    ViewBag.Title = "Cambiar Contraseña";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>@ViewBag.Title.</h2>
-
+<div class="container-fluid">
+    <div class="col-md-5">
+        <ol class="breadcrumb">
+            <li>@Html.ActionLink("Mi Cuenta", "MiCuenta", "CuentaUsuario")</li>
+            <li class="active">Cambiar Contrasena</li>
+        </ol>
+    </div>
+</div>
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+    <div class="col-md-8">
+        <div class="row form-group">
+            @Html.LabelFor(c => c.OldPassword, new { @class = "control-label col-md-3" })
+            <div class="col-md-8">
+                @Html.TextBoxFor(c => c.OldPassword, new { @type = "password", @class = "form-control" })
+                @Html.ValidationMessageFor(c => c.OldPassword)
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+        <div class="row form-group">
+            @Html.LabelFor(c => c.NewPassword, new { @class = "control-label col-md-3" })
+            <div class="col-md-8">
+                @Html.TextBoxFor(c => c.NewPassword, new { @type = "password", @class = "form-control" })
+                @Html.ValidationMessageFor(c => c.NewPassword)
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+        <div class="row form-group">
+            @Html.LabelFor(c => c.ConfirmPassword, new { @class = "control-label col-md-3" })
+            <div class="col-md-8">
+                @Html.TextBoxFor(c => c.ConfirmPassword, new { @type = "password", @class = "form-control" })
+                @Html.ValidationMessageFor(c => c.ConfirmPassword)
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
+        <div class="row" style="text-align: center">
+            <button style="button" class="btn btn-primary">Cambiar </button>
+            <a href="@Url.Action("MiCuenta","CuentaUsuario")" class="btn btn-danger">Salir <span class="glyphicon glyphicon-log-out"></span> </a>
         </div>
     </div>
 }
