--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
@@ -14,7 +14,7 @@
             <form action="" class="form-horizontal ">
                 <ol id="pref" class="navbar " style="font-size:20px;">
                     <li><a href="@Url.Action("ModificarDatos","CuentaUsuario")">Actualizar mis datos</a>
-                    <li><a href="@Url.Action("CambiarContrasena","CuentaUsuario")">Cambiar mi contraseña</a>
+                    <li><a href="@Url.Action("ChangePassword","Manage")">Cambiar mi contraseña</a>
                     <li><a href="@Url.Action("MisReservas", "CuentaUsuario")">Ver mis reservas</a>
                     <li><a href="@Url.Action("MisCompras", "CuentaUsuario")">Ver mis Compras</a>
                     <li><a href="">Ver carrito</a>
