--- a/WebApplication4/WebApplication4/Views/Evento/DatosGenerales.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/DatosGenerales.cshtml
@@ -39,7 +39,7 @@
                         @Html.LabelFor(c => c.idOrganizador, new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             <div class="input-group">
-                                <input type="text" class="form-control" id="organizadorNombre" readonly />
+                                <input type="text" class="form-control" id="organizadorNombre" value="@ViewBag.NombreOrganizador" readonly />
                                 @Html.HiddenFor(c => c.idOrganizador, new { @id = "valOrganizador" })
                                 <span class="input-group-btn"><a href="#modalBuscarOrganizador" class="btn btn-primary" data-toggle="modal" type="button">Buscar <span class="glyphicon glyphicon-search"></span></a></span>
                             </div>
@@ -65,7 +65,7 @@
                         @Html.LabelFor(c => c.Local, new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             <div class="input-group">
-                                <input class="form-control" id="localNombre" readonly />
+                                <input class="form-control" id="localNombre" value="@ViewBag.NombreLocal" readonly />
                                 @Html.HiddenFor(c => c.Local, new { @id = "valLocal" })
                                 <span class="input-group-btn"><a href="#modalBuscarLocal" class="btn btn-primary" data-toggle="modal" type="button">Buscar <span class="glyphicon glyphicon-search"></span></a></span>
                             </div>
