Cambios en Mantto clientes :P

--- a/WebApplication4/WebApplication4/Views/Account/RegisterClient.cshtml
+++ b/WebApplication4/WebApplication4/Views/Account/RegisterClient.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebApplication4.Models.RegisterViewModel
 
 @{
-    ViewBag.Title = "RegisterClient";
+    ViewBag.Title = "Registrar Cliente";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
